higher quality background image

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 }
 /* background image add  */
 body {
-    background-image: url("./components/img/maincover1.png");
+    background-image: url("./components/img/NuOrderHomeBG.jpg");
 } 
 
 /* * {
