--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,7 @@
-.app__header-h1 {
+.header-h1 {
     font-family: var(--font-base);
     color: var(--color-golden);
     letter-spacing: 0.04em;
     line-height: 100px;
-    font-size: 45px;
+    font-size: 70px;
 }
