--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,7 +1,7 @@
 .card-container {
     display: flex;
     flex-direction: column;
-    background-color: #95dada;
+    background-color: #c6dddd;
     border: 1px solid grey;
     border-radius: 5px;
     padding: 25px;
@@ -14,6 +14,5 @@
   
   .card-container:hover {
     transform: scale(1.05);
+    box-shadow: 0 0 20px #a5a3a3;
   }
-
-  
