small design changes
PersistResInfo and InfoEdit:
Add UI to image upload

Cart.js
Increase Modal width

About.css
Add CSS to increase Cart.js Modal width

Customer.js
Change placeholder text
Change Restaurant cannot be found to white text

ViewWebPage.js
Change format for readability

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -16,3 +16,8 @@
 .logo-button:focus {
   border: none;
 }
+
+/* Cart.js modal width "Your Current Order"  */
+.modal-90w{
+  max-width: 60% !important;
+}
