add tooltip to restaurant banner image change form to black text add react-bootstrap to image upload

--- a/src/owner/Form.css
+++ b/src/owner/Form.css
@@ -1,11 +1,8 @@
-.createform {
-  color: #ffffff;
+/* ensures that the "Remove Image" button text stays on one line */
+.remove-button {
+  min-width: 131px;
 }
 
-.blacktext {
-  color: black;
-}
-
-.OwnerCheck{
-  color: RGB(240, 178, 109)
+.remove-item {
+  min-width: 20px;
 }
