add cart animation and icon to all templates

--- a/src/pages/Templates/Template3.module.css
+++ b/src/pages/Templates/Template3.module.css
@@ -91,3 +91,21 @@
   color: var(--white) !important;
   outline: none;
 }
+
+.cart-icon {
+  color: matcha;
+  transition: transform 1s ease-in-out;
+  position: relative;
+  margin-left: 10px;
+}
+
+.roll-off {
+  /* moves the icon to the right */
+  transform: translateX(5600%);
+}
+
+.button-class {
+  /* makes cart appear to dissapear into button border */
+  overflow: hidden;
+  position: relative;
+}
