add hover effect to View Cart icon

--- a/src/pages/Cart.module.css
+++ b/src/pages/Cart.module.css
@@ -43,3 +43,11 @@
 .iconRemove{
   color: red;
 }
+
+.incrementButton {
+  margin-left: 9px; /* Adjust this value to your liking */
+}
+
+.decrementButton {
+  margin-right: 5px; /* Adjust this value to your liking */
+}
