--- a/src/pages/Templates/Template1.module.css
+++ b/src/pages/Templates/Template1.module.css
@@ -5,8 +5,14 @@
   margin-left: 10px;
 }
 
-.roll-off {
+/* spin upon hover */
+.cart-icon:hover {
+  transform: rotateY(180deg);
+  transition: transform 1s linear;
+}
+
   /* moves the icon to the right */
+.roll-off {
   transform: translateX(5600%);
 }
 
