--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,4 @@
-.home_bg_image {
+/* .home_bg_image {
   background-image: url(/src/assests/NuOrderHomeBG.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -11,10 +11,10 @@
   bottom: 0;
   z-index: 0;
 }
-
+ */
 
 .logoHome:hover {
-  filter: drop-shadow(0 0 5px #8a8989);
+  filter: drop-shadow(0 0 10px #f5f4f4);
 }
 
 .logoHome {
