stylistic changes to the form menus add reactive buttons upon upload of images change font for form add tooltip to restaurant banner image change form to black text add react-bootstrap to image upload fix template format

--- a/src/owner/Form.css
+++ b/src/owner/Form.css
@@ -9,3 +9,16 @@
 .OwnerCheck{
   color: RGB(240, 178, 109)
 }
+
+
+.remove-button {
+  min-width: 137px;
+}
+/*
+.remove-item {
+  min-width: 20px;
+} */
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
