--- a/src/pages/ViewStatus.module.css
+++ b/src/pages/ViewStatus.module.css
@@ -2,3 +2,10 @@
 body {
     font-family: 'Open Sans', sans-serif;
   }
+
+.floatingButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
