add asterisk icons to indicate required fields for both create and edit webpage reformat hours in edit for better readability bold all fields in edit webpage for better readability

--- a/src/owner/Form.module.css
+++ b/src/owner/Form.module.css
@@ -45,3 +45,10 @@ adds width so words don't wrap and margin for improved spacing */
 .imageupload {
   margin-top: 20px;
 }
+
+.asteriskicon{
+  position: relative;
+          color: red;
+          top: -5px;
+          left: -5px;
+}
