change contact styles change homepage restaurant borders

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -29,3 +29,33 @@
   resize: contain;
   position: inherit;
 }
+
+
+/* animate mail and github icons on contact page to bounce upon hover */
+@keyframes bounce {
+  0%, 20%, 60%, 100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-3px);
+  }
+
+  80% {
+    transform: translateY(-2px);
+  }
+}
+
+
+/* mail and github icons on contact page */
+.linkicon {
+  color: black;
+  transition: color 0.3s ease;
+  display: inline-block;
+
+}
+
+.linkicon:hover {
+  color: #E1CD56;
+  animation: bounce 1s infinite;
+}
