added cursor on the carousel

--- a/src/pages/Templates/Template1.module.css
+++ b/src/pages/Templates/Template1.module.css
@@ -21,3 +21,14 @@
   overflow: hidden;
   position: relative;
 }
+
+.cart-container {
+  height: 400px;
+  overflow-y: scroll;
+}
+
+.cart-container.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
