--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -8,6 +8,11 @@
   box-shadow: 0px 12px 18px -6px rgb(0, 0, 0, 0.3);
 }
 
+.box:hover {
+  transform: scale(1.00);
+  box-shadow: 0 0 20px #a5a3a3;
+}
+
 .box {
   margin: 20px;
 }
