cart scrolling and foodname inside Card

--- a/src/pages/Templates/Template1.module.css
+++ b/src/pages/Templates/Template1.module.css
@@ -21,3 +21,9 @@
   overflow: hidden;
   position: relative;
 }
+
+.sticky-col {
+  position: sticky !important; 
+  top: 0;
+  height: 100vh; /* optional, if you want the column to take the full viewport height */
+}
