template1 buttons change from default

--- a/src/pages/Templates/Template1.module.css
+++ b/src/pages/Templates/Template1.module.css
@@ -32,3 +32,14 @@
   top: 0;
   width: 100%
 }
+
+.reviewButton{
+  background-color: #3F86C4 !important;
+  border-color: #3F86C4 !important;
+}
+
+.reviewButton:hover{
+  background-color: #3570a3 !important;
+  border-color: #3570a3 !important;
+
+}
