--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,3 @@
-
-
 .logoHome:hover {
   filter: drop-shadow(0 0 10px #f5f4f4);
 }
@@ -16,11 +14,12 @@
   box-shadow: none !important;
 }
 
+/* the height of nav bar */
 div.col-md-auto{
   height: 65px !important;
 }
 
-
+/* sign out dropdown */
 .dropdown-menu {
   left: auto !important;
   right: 0 !important;
