--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -47,3 +47,12 @@
   width: 200px;
   z-index: 999;
 }
+
+.message-timestamp  {
+  display: none;
+}
+
+.message-content:hover + .message-timestamp {
+  display: block;
+  color:#888;
+}
