--- a/src/pages/ViewStatus.module.css
+++ b/src/pages/ViewStatus.module.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Open Sans', sans-serif;
   }
@@ -8,4 +7,17 @@ body {
     bottom: 20px;
     right: 20px;
     z-index: 1000;
+  }
+
+  .orders-button {
+      margin-bottom: 20px;
+      background-color: #212529 !important;
+      color: white;
+      border-color: #212529 !important; 
+      transition: box-shadow 0.3s ease;
+  }
+
+  .orders-button:hover {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
+    background-color: #212529 !important;
   }
