--- a/src/pages/Templates/Template3.module.css
+++ b/src/pages/Templates/Template3.module.css
@@ -115,3 +115,10 @@
   overflow: hidden;
   position: relative;
 }
+
+/* Sizing the image of menu items */
+.foodimg {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
+}
