--- a/src/pages/Templates/Template3.module.css
+++ b/src/pages/Templates/Template3.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=ITC+Avant+Garde+Gothic+Demi+Condensed&display=swap');
+
+
 :root {
   --lime: #91c11e;
   --grass: #659a41;
@@ -20,13 +23,13 @@
 
 /* card styling */
 .card {
-  background-color: var(--white);
-  border-color: var(--grass);
+  background-color: var(--white) !important;
+  border-color: var(--grass) !important;
   border-width: 3px !important;
 }
 
 .cardHeader {
-  background-color: var(--matcha);
+  background-color: var(--matcha)!important;
 }
 
 .cardTitle,
@@ -47,8 +50,8 @@
 }
 
 .cardFooter {
-  background-color: var(--white);
-  border-color: var(--white);
+  background-color: var(--white)!important;
+  border-color: var(--white)!important;
 }
 
 /* button styling for "Leave Review" and "View Reviews" */
@@ -121,4 +124,10 @@
   width: 100%;
   height: 20vh;
   object-fit: cover;
+}
+
+.foodType {
+  font-family: "ITC Avant Garde Gothic Demi Condensed", sans-serif;
+  text-transform: uppercase;
+  color: #763C12;
 }
