stylize default buttons on Cart

--- a/src/pages/Cart.module.css
+++ b/src/pages/Cart.module.css
@@ -48,3 +48,40 @@
 .decrementButton {
   margin-right: 5px;
 }
+
+/* template 1 blue cart buttons */
+.cartbutton {
+  background-color: #3f86c4 !important;
+  border-color: #3f86c4 !important;
+  border-radius: 4px !important;
+}
+
+.cartbutton:hover {
+  background-color: #3570a3 !important;
+  border-color: #3570a3 !important;
+
+}
+
+.cartbutton {
+  background-color: #3f86c4 !important;
+  border-color: #3f86c4 !important;
+  border-radius: 4px !important;
+}
+
+.cartbutton:hover {
+  background-color: #3570a3 !important;
+  border-color: #3570a3 !important;
+
+}
+
+.editorder{
+  background-color: #212529 !important;
+  border-color: #212529 !important;
+  border-radius: 4px !important;
+  margin-right: 3px;
+}
+
+.editorder:hover{
+  background-color: #000000  !important;
+  border-color: #000000  !important;
+}
