--- a/src/components/rating/ViewReview.css
+++ b/src/components/rating/ViewReview.css
@@ -3,3 +3,14 @@
     max-width: 700px;
   }
 
+  .submitButton {
+
+    background-color: #3f86c4 !important;
+    border-color: #3f86c4 !important;
+
+  }
+
+  .submitButton:hover {
+    background-color: #3570a3 !important;
+    border-color: #3570a3 !important;
+  }
