--- a/src/pages/PageNotFound.css
+++ b/src/pages/PageNotFound.css
@@ -1,7 +1,7 @@
 .ice-cream{
     width: 100;
     height: 50px;
-    
+
 }
 
 .cont{
@@ -12,4 +12,22 @@
 
 .row-height {
     height: 100rem !important;
+  }
+
+.buttonLink{
+    border-radius: 25px;
+    border: 2px solid white;
+    color: white;
+    font-weight: bold;
+    font-size: 1.1rem;
+    background-color: black;
+  }
+
+  .buttonLink:hover{
+    border-radius: 25px;
+    border: 2px solid white;
+    color: white;
+    font-weight: bold;
+    font-size: 1.1rem;
+    background-color: #212529;
   }
