add spacing before image preview

--- a/src/owner/Form.module.css
+++ b/src/owner/Form.module.css
@@ -116,3 +116,7 @@ adds width so words don't wrap and margin for improved spacing */
   border-color: #000000  !important;
 
 }
+
+.imagePreview {
+  margin-top: 0px;
+}
