--- a/src/pages/Templates/Template2.module.css
+++ b/src/pages/Templates/Template2.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
+
 :root {
   --dark: #0e0e0d;
   --night: #3f3d3d;
@@ -133,4 +135,7 @@
   width: 100%;
   height: 20vh;
   object-fit: cover;
+}
+.foodType{
+  font-family: 'Lato', sans-serif;
 }
