--- a/src/pages/Templates/info.module.css
+++ b/src/pages/Templates/info.module.css
@@ -1,5 +1,8 @@
 /* Template 1 */
 .operatingHoursButtonTemplate1 {
+  width: 30%;
+  margin-bottom: 10px;
+  margin-top: -5px;
   background-color: var(--white) !important;
   color: var(--dark) !important;
   border-color: var(--biscuit) !important;
